modules/security_groups/sg_eks_master.tf
resource "aws_security_group" "eks-master" {
  name        = "${var.cluster_name}-master"
  description = "Cluster communication with worker nodes"
  vpc_id      = "${var.vpc_id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "${var.cluster_name}-master"
    Owner = "${var.owner}"
  }
}
